--- a/Views/Books/Delete.cshtml
+++ b/Views/Books/Delete.cshtml
@@ -21,7 +21,7 @@
     </div>
 
     <form asp-action="Delete" method="post" class="mt-4">
-        <input type="hidden" name="id" value="@Model.BookId" />
+        <input type="hidden" name="id" value="@Model.Id" />
         @Html.AntiForgeryToken()
         <button type="submit" class="btn btn-danger btn-lg">Yes, Delete</button>
         <a asp-action="Index" class="btn btn-secondary btn-lg">Cancel</a>
