--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -39,7 +39,7 @@
 <br />
 
 <form asp-action="Delete" method="post">
-    <input type="hidden" name="id" value="@Model.StudentId" />
+    <input type="hidden" name="id" value="@Model.Id" />
     <button type="submit" class="btn btn-danger">Yes, Delete</button>
     <a asp-action="Index" class="btn btn-secondary">Cancel</a>
 </form>
