--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Practice_Project.Models.StudentVm>
+@model IEnumerable<Practice_Project.Entities.Student>
 
 @{
     ViewData["Title"] = "Students List";
@@ -35,8 +35,8 @@
                 </span>
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.StudentId" class="btn btn-sm btn-warning">Edit</a>
-                <a asp-action="Delete" asp-route-id="@item.StudentId" class="btn btn-sm btn-danger">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning">Edit</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Delete</a>
             </td>
         </tr>
     }
