--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -3,16 +3,21 @@
 @{
     ViewData["Title"] = "Students List";
 }
-
+<div class="container mt-4">
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2 class="text-primary fw-bold">Students Management</h2>
+    <h2 class="text-success fw-bold ">Students Management</h2>
+    <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
     <a asp-action="Create" class="btn btn-success btn-lg">
         Add New Students
     </a>
+   
 </div>
 
 
-<table class="table table-striped table-hover">
+<table class="table table-bordered table-striped table-hover">
     <thead class="table-dark">
     <tr>
         <th>Name</th>
@@ -46,3 +51,4 @@
     }
     </tbody>
 </table>
+</div>
