--- a/Views/Authors/Index.cshtml
+++ b/Views/Authors/Index.cshtml
@@ -13,7 +13,7 @@
         <input class="form-control"
                type="text"
                name="searchString"
-               placeholder="Search by Student Name"
+               placeholder="Search "
                aria-label="Search"
                value="@ViewData["CurrentFilter"]"/>
 
