--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -6,10 +6,24 @@
 <div class="container mt-4">
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2 class="text-success fw-bold ">Students Management</h2>
+    @*
     <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
+    *@
+    
+    <form asp-action="Index" method="get" class="d-flex" role="search">
+        <div class="input-group">
+            <input type="search"
+                   name="searchString"
+                   value="@Context.Request.Query["searchString"]"
+                   class="form-control me-2"
+                   placeholder="Search by student name" />
+            <button type="submit" class="btn btn-outline-success">Search</button>
+        </div>
+    </form>
+    
     <a asp-action="Create" class="btn btn-success btn-lg">
         Add New Students
     </a>
