working in layout and fixing the flow of views

--- a/Views/BookIssue/Index.cshtml
+++ b/Views/BookIssue/Index.cshtml
@@ -47,7 +47,7 @@
                     <th>Due Date</th>
                     <th>Status</th>
                     <th>Fine</th>
-                    <th>Actions</th>
+                    <th>Retrun Date</th>
                 </tr>
             </thead>
             <tbody>
