--- a/Views/BookIssue/Return.cshtml
+++ b/Views/BookIssue/Return.cshtml
@@ -23,13 +23,13 @@
                 <dd class="col-sm-9">@Model.Student.Name</dd>
 
                 <dt class="col-sm-3">Issue Date</dt>
-                <dd class="col-sm-9">@Model.IssueDate:dd MMM yyyy</dd>
+                <dd class="col-sm-9">@Model.IssueDate</dd>
 
                 <dt class="col-sm-3">Due Date</dt>
-                <dd class="col-sm-9">@Model.DueDate:dd MMM yyyy</dd>
+                <dd class="col-sm-9">@Model.DueDate</dd>
 
                 <dt class="col-sm-3">Today's Date</dt>
-                <dd class="col-sm-9">@DateTime.UtcNow:dd MMM yyyy</dd>
+                <dd class="col-sm-9">@DateTime.UtcNow</dd>
             </dl>
         </div>
     </div>
