--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -10,8 +10,7 @@
         <div class="col-md-8 col-lg-6">
             <div class="card shadow">
                 <div class="card-header bg-success text-white text-center">
-                    <h3>Register New Librarian / Admin</h3>
-                    <small>Only Admins can create new accounts</small>
+                    <h3>Register New Librarian </h3>
                 </div>
                 <div class="card-body p-4">
 
@@ -64,6 +63,6 @@
     </div>
 </div>
 
-@section Scripts {
+@*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
