--- a/Views/BookIssue/ReturnConfirm.cshtml
+++ b/Views/BookIssue/ReturnConfirm.cshtml
@@ -35,7 +35,7 @@
                 <dt class="col-sm-3">Student</dt>
                 <dd class="col-sm-9">@Model.Student.Name</dd>
                 <dt class="col-sm-3">Due Date</dt>
-                <dd class="col-sm-9">@Model.DueDate:dd MMM yyyy</dd>
+                <dd class="col-sm-9">@Model.DueDate</dd>
             </dl>
         </div>
     </div>
